Bug 13471 - Memory leak onto long-term context with duplicate add
Summary: Memory leak onto long-term context with duplicate add
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.8.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-13 09:19 UTC by Andrew Bartlett
Modified: 2021-08-23 02:22 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2018-06-13 09:19:36 UTC
After a duplicated add a small amount of memory can be leaked onto a long-term context.

Found by Andrej Gessel https://github.com/andiges

https://github.com/samba-team/samba/commit/e8fb45125e6a279b918694668e0d4fbddac10aee#commitcomment-29334102
Comment 1 Andrew Bartlett 2021-08-23 02:22:48 UTC
Fixed in Samba 4.8 and later.